camunda8/connectors/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connectors
  labels:
    app: connectors
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connectors
  template:
    metadata:
      labels:
        app: connectors
    spec:
      containers:
        - name: connectors
          image: docker.io/camunda/connectors-bundle:8.4.19
          ports:
            - name: http
              containerPort: 8080
