camunda8/connectors/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: connectors
  labels:
    app: connectors
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: connectors
